--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,19 +1,20 @@
 {
-    "name": "database",
-    "module": "index.ts",
-    "type": "module",
-    "scripts": {
-        "migrate": "bun run src/migrate.ts"
-    },
-    "devDependencies": {
-        "@types/bun": "latest",
-        "drizzle-kit": "^0.20.14"
-    },
-    "peerDependencies": {
-        "typescript": "^5.0.0"
-    },
-    "dependencies": {
-        "drizzle-orm": "^0.30.2",
-        "postgres": "^3.4.3"
-    }
+  "name": "database",
+  "module": "index.ts",
+  "type": "module",
+  "scripts": {
+    "make-migration": "bun drizzle-kit generate:pg",
+    "migrate": "bun run ./src/migrate.ts"
+  },
+  "devDependencies": {
+    "@types/bun": "latest",
+    "drizzle-kit": "^0.20.14"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "drizzle-orm": "^0.30.2",
+    "postgres": "^3.4.3"
+  }
 }
